Potential fix for iPhone collapse

--- a/src/main/webapp/css/knowplace.css
+++ b/src/main/webapp/css/knowplace.css
@@ -13,6 +13,3 @@ body {
 	margin-left: 15px;
 	margin-bottom: 10px;
 }
-.list-group-item:hover {
-	cursor: pointer;
-}
